<resources>
    <string name="app_name">edmodo_203898309_305186108</string>
    <string name="Create_free_account">Create Free Acount</string>
    <string name="TeachMore">Teach More.</string>
    <string name="im_a">i\'m a</string>
    <string name="Teacher">Teacher</string>
    <string name="Student">תלמיד</string>
    <string name="i_alredy_have_an_acount">I already have an account</string>
    <string name="Group_Code">Group Code</string>
    <string name="username">Username:3+characters</string>
    <string name="Password">Password:6+characters</string>
    <string name="Email">Email(optional)</string>
    <string name="Next">Next</string>
    <string name="Signup">Signup</string>
    <string name="Welcome_to_Edmodo">Welcome to Edmodo</string>
    <string name="Personalize_Your_Profile_Photo">Personalize Your Profile Photo</string>
    <string name="Tap_to_Change_your_avatar">Tap to change your avatar</string>
    <string name="Done">Done</string>
    <string name="Update_Avatar">Update Avatar</string>

    <array name="Update_Avatar">

        <item>Choose from Gallery</item>
        <item>Use Camera</item>


    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="letest_activity">Latest Activity</string>
    <string name="Classes">Classes</string>
    <string name="Whats_dueid">What\'s Due</string>
    <string name="Messages">Messages</string>
    <string name="My_Activity">My Activity</string>
    <string name="more_frinds_in_class">חברים נוספים</string>
    <string name="Archived">Archived</string>
    <string name="To_Do">To Do</string>
    <string name="Finished">Finished</string>
    <string name="No_todo_items_yet">No todo items yet.</string>
    <string name="no_finished_items_yet">No finished items yet.</string>
    <string name="get_started">Get started</string>
    <string name="text_for_empty_massage">Send a quick message or share a file with people in your school community</string>
    <string name="search_recipients">Search recipients</string>
    <string name="more">More</string>
    <string name="notification">Notification</string>
    <string name="classes">classes</string>
    <string name="what_s_due">what\'s Due</string>
    <string name="messages">Messages</string>
    <string name="Type_a_message">Type a message</string>
    <string name="new_message">New Message</string>
    <string name="My_profil">My Profile</string>
    <string name="back">חזרה</string>
    <string name="Invite_parent">Invite parent</string>
    <string name="CLASSMATES">CLASSMATES</string>
    <string name="stream">stream</string>
    <string name="Class_settings">Class settings</string>
    <string name="Its_cool_nothing_new">It\'s cool, nothing new</string>
    <string name="Help">Help</string>
    <string name="Sign_out">Sign Out</string>
    <string name="My_Group">My Groups</string>
    <string name="No_Archives_Classes">No Archives Classes</string>
    <string name="Teachr_and_Student">Teachr and Student</string>
    <string name="Use_Camera">Use Camera</string>
    <string name="Choose_From_Gallery">Choose from Gallery</string>
    <string name="share_a_resource_photo_or_article">share a resource photo or article...</string>
    <string name="textforFeed">Looks a Bit Empty Create Your first post above.</string>
    <string name="add_Link">Add Link</string>
    <string name="Title">Title</string>
    <string name="Link">Link</string>
    <string name="Share_a_photo_video_poll_or_idea">Share a photo, video, poll, or idea</string>
    <string name="New_Post">New Post</string>
    <string name="Latest_Activity">Latest Activity</string>
    <string name="My_Classes">My Classes</string>
    <string name="yishai_coorsh">yishai coorsh</string>
    <string name="yishai">yishai</string>
    <string name="feed">feed</string>
    <string name="frends">frends</string>
    <string name="Eden_david">Eden david</string>
    <string name="talmid">תלמיד</string>
    <string name="Resources">Resources</string>
    <string name="YRON">YRON</string>
    <string name="Dan">Dan</string>
    <string name="add_code">הצטרפות</string>
    <string name="Enter_Group_Code">Enter Group Code</string>
    <string name="Name">Name</string>
    <string name="createGroup">Create Group</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="Do_you_want_to_delete_this_messgae">Do you want to delete this messgae</string>
    <string name="save_button">Save</string>
    <string name="cancel_btn">cancel</string>
    <string name="edit_this_post">edit this post</string>


</resources>
