<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="4dip"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_this_post"
        android:textSize="18dp"
        />

    <EditText
        android:id="@+id/editTxtePost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        />


    <Button
        android:text="@string/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/saveBtn" />

    <Button
        android:text="@string/cancel_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cancelBtn" />


</LinearLayout>