<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.course.edmodo_203898309_305186108.More.MoreFragment"
    android:weightSum="4"
    android:orientation="vertical"
    >


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:layout_weight="6"
       android:gravity="center"
       >
       <ImageView
           android:id="@+id/MoreImageP"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/ic_profile_gray"
           android:layout_gravity="center"
           />
       <TextView
           android:id="@+id/MoreNameP"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/Eden_david"
           android:layout_gravity="center"

           />

       <TextView
           android:id="@+id/MoreTypeP"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/talmid"
           android:layout_gravity="center"
           />

   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/mor_my_profile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_profile_grayy"
            android:text="@string/My_profil"
            android:background="@color/whiteColor"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:gravity="left|center"
            android:drawablePadding="10dp"

            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:drawableLeft="@drawable/ic_library_gray"
            android:background="@color/whiteColor"
            android:layout_marginBottom="2dp"
            android:gravity="left|center"
            android:drawablePadding="10dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Help"
            android:drawableLeft="@drawable/ic_help_gray"
            android:background="@color/whiteColor"
            android:layout_marginBottom="2dp"
            android:gravity="left|center"
            android:drawablePadding="10dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sign_out"
            android:drawableLeft="@drawable/ic_power_gray"
            android:background="@color/whiteColor"
            android:layout_marginBottom="2dp"
            android:gravity="left|center"
            android:drawablePadding="10dp"
            />

    </LinearLayout>

</LinearLayout>
