<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >





        <ImageView

            android:layout_width="124dp"
            android:layout_height="99dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Teachr_and_Student"
            android:textColor="@color/whiteColor"
            android:textSize="24sp"
            android:textStyle="bold" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_marginBottom="5dp"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/curner_buttone"
        android:onClick="toTechaer1"
        android:text="@string/Eden_david"
        android:textColor="@color/black"
        android:layout_marginEnd="20dp"
        />
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/curner_buttone"
        android:onClick="toStudent1"
        android:text="@string/yishai"
        android:textColor="@color/black" />


</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/curner_buttone"
            android:onClick="toTechaer2"
            android:text="@string/YRON"
            android:textColor="@color/black"
            android:layout_marginEnd="20dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/curner_buttone"
            android:onClick="toStudent2"
            android:text="@string/Dan"
            android:textColor="@color/black" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"

        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/curner_buttone"
            android:onClick="toTechaer3"
            android:text="teacher"
            android:textColor="@color/black"
            android:layout_marginEnd="20dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/curner_buttone"
            android:onClick="toStudent3"
            android:text="student"
            android:textColor="@color/black" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/sign_up_illustration" />


    </LinearLayout>


</LinearLayout>